Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.4.0
-
Windows 10 Pro 21H2, MSVC 2019
-
337f6fa60b (qt/qtwebengine/dev) 337f6fa60b (qt/tqtc-qtwebengine/dev) c33f8fae0e (qt/qtwebengine/6.4) c33f8fae0e (qt/tqtc-qtwebengine/6.4) c33f8fae0e (qt/tqtc-qtwebengine/6.4.1) c33f8fae0e (qt/tqtc-qtwebengine/6.2)
Description
Tested with the Simple Browser example: https://doc.qt.io/qt-6/qtwebengine-webenginewidgets-simplebrowser-example.html
Passing --remote-debugging-port=8888 as a command line argument seems to have no effect.
Workaround
Use the environment variable QTWEBENGINE_REMOTE_DEBUGGING=8888 instead.
Attachments
Issue Links
- resulted from
-
QTBUG-68820 simplebrowser crashes when passing command line argument "-type=1"
-
- Closed
-