Cleanup and document webEngineArgs command line option

Fix usage of badcode vs code.

This commit amends 82357352b49fdcba80727feec441053f676b5af2.

Fixes: QTBUG-107502
Change-Id: I50be8b37a81f33ef8e8dff3985d00f562542031a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 337f6fa60b1fd17549537ed16c83b57ac5318c25)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>